--- a/Solution/projects-web/CMakeLists.txt
+++ b/Solution/projects-web/CMakeLists.txt
@@ -1,13 +1,20 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.9)
-PROJECT(projects-web)
-
-FIND_PACKAGE(Boost COMPONENTS system thread signals)
-FIND_LIBRARY(wt wt)
-FIND_LIBRARY(wthttp wthttp)
-
 SET (CMAKE_CXX_STANDARD 14)
-SET (WT_CONNECTOR "wtfcgi" CACHE STRING "Connector used (wthttp or wtfcgi)")
+
+PROJECT(WT_EXAMPLE)
+
+set(Boost_STATIC ON)
+FIND_PACKAGE (Boost REQUIRED system thread signals filesystem program_options)
+
+if(Boost_FOUND)
+    include_directories(${Boost_INCLUDE_DIRS})
+    set(libs ${libs}    ${Boost_LIBRARIES})
+endif()
+
+
+SET (WT_CONNECTOR "wthttp" CACHE STRING "Connector used (wthttp or wtfcgi)")
 
 ADD_SUBDIRECTORY(src)
 
-ADD_EXECUTABLE(projects-web program.c)
+INCLUDE_DIRECTORIES(/usr/local/include)
+LINK_DIRECTORIES(/usr/local/lib)
